# raytracer

./: .gitignore  Cargo.toml  readme.md
config/: parallel_planes.yaml  scene.json  scene.yaml  simple_test.yaml
debug/: simple.yaml
examples/: demo.yaml  mandelbrot.yaml  mandelbrot_plane.yaml  test.yaml
src/: basics.rs  camera.rs  colormap.rs  lib.rs  main.rs  ray.rs  trace.rs  vop.rs
src/data/: colorcet_cmaps.bson
src/geometry/: basics.rs  mod.rs  sop.rs  vop.rs
src/geometry/shape/: mod.rs
src/geometry/shape/shape2d/: mod.rs  plane.rs  rectangle.rs
src/geometry/shape/shape3d/: mod.rs  sphere.rs
src/light/: mod.rs  ray.rs
src/shape/: cylinder.rs  infiniteplane.rs  mod.rs  paraboloid.rs  rectangle.rs  sphere.rs
src/surface/: checkerboard.rs  mandelbrotplane.rs  mandelbrotsphere.rs  mod.rs  plane.rs  rectangle.rs  sphere.rs  surfaces.rs  texturedrectangle.rs  zparaboloid.rs
src/surface/cylinder/: mod.rs  simple.rs
src/surface/disk/: mod.rs
src/surface/paraboloid/: mod.rs  simple.rs
src/surface/plane/: checkerboard.rs  mandelbrot.rs  mod.rs  simple.rs
src/surface/rectangle/: mod.rs  simple.rs  textured.rs
src/surface/sphere/: mod.rs  simple.rs
tests/: ray_bounce_tests.rs  ray_direction_tests.rs  ray_lifetime_tests.rs
