[package]
name = "raytracer"
version = "0.1.0"
authors = ["Tudor Tomescu <tudor.tomescu97@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
image = "0.23"
log = "0.4"
serde_yaml = "0.8"
indicatif = "0.15"
rayon = "1.5"
num_cpus = "1.13"

[dependencies.serde]
version = "1.0"
features = ["derive"]