[package]
name = "raytracer"
version = "1.2.0"
authors = ["Tudor Tomescu <tudor.tomescu97@gmail.com>"]
edition = "2018"

[dependencies]
image = "0.23"
serde_yaml = "0.8"
rayon = "1.5"
num_cpus = "1.13"
num-complex = "0.3"
nalgebra = "0.24"
colorgrad = "0.3"
# itertools = "0.10"

[dependencies.serde]
version = "1.0"
features = ["derive"]

# [dependencies.indicatif]
# version = "0.15" 
# features = ["rayon"]